docs/api/qiskit/0.28/qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.mdx
---
title: RZXCalibrationBuilderNoEcho
description: API reference for qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho
---

# qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho

<Class id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/transpiler/passes/scheduling/calibration_creators.py" signature="RZXCalibrationBuilderNoEcho(backend)">
  Creates calibrations for RZXGate(theta) by stretching and compressing Gaussian square pulses in the CX gate.

  The `RZXCalibrationBuilderNoEcho` is a variation of the [`RZXCalibrationBuilder`](qiskit.transpiler.passes.RZXCalibrationBuilder "qiskit.transpiler.passes.RZXCalibrationBuilder") pass that creates calibrations for the cross-resonance pulses without inserting the echo pulses in the pulse schedule. This enables exposing the echo in the cross-resonance sequence as gates so that the transpiler can simplify them. The `RZXCalibrationBuilderNoEcho` only supports the hardware-native direction of the CX gate.

  Initializes a RZXGate calibration builder.

  **Parameters**

  **backend** (*\<module 'qiskit.providers.basebackend' from '/home/computertreker/git/qiskit/qiskit/.tox/docs/lib/python3.7/site-packages/qiskit/providers/basebackend.py'>*) – Backend for which to construct the gates.

  **Raises**

  **QiskitError** – if open pulse is not supported by the backend.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.__init__" name="__init__" signature="__init__(backend)">
    Initializes a RZXGate calibration builder.

    **Parameters**

    **backend** (*\<module 'qiskit.providers.basebackend' from '/home/computertreker/git/qiskit/qiskit/.tox/docs/lib/python3.7/site-packages/qiskit/providers/basebackend.py'>*) – Backend for which to construct the gates.

    **Raises**

    **QiskitError** – if open pulse is not supported by the backend.
  </Function>

  ## Methods

  |                                                                                                                                                                                             |                                                                       |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.__init__ "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.__init__")(backend)                                       | Initializes a RZXGate calibration builder.                            |
  | [`get_calibration`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.get_calibration "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.get_calibration")(params, qubits)           | Builds the calibration schedule for the RZXGate(theta) without echos. |
  | [`name`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.name "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.name")()                                                          | Return the name of the pass.                                          |
  | [`rescale_cr_inst`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.rescale_cr_inst "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.rescale_cr_inst")(instruction, theta\[, …]) | **type instruction**`Play`                                            |
  | [`run`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.run "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.run")(dag)                                                          | Run the calibration adder pass on dag.                                |
  | [`supported`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.supported "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.supported")(node\_op)                                   | **type node\_op**`DAGNode`                                            |

  ## Attributes

  |                                                                                                                                                                                        |                                             |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_analysis_pass "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_transformation_pass "qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### get\_calibration

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.get_calibration" name="get_calibration" signature="get_calibration(params, qubits)">
    Builds the calibration schedule for the RZXGate(theta) without echos.

    **Parameters**

    *   **params** (`List`) – Parameters of the RZXGate(theta). I.e. params\[0] is theta.
    *   **qubits** (`List`) – List of qubits for which to get the schedules. The first qubit is the control and the second is the target.

    **Returns**

    The calibration schedule for the RZXGate(theta).

    **Return type**

    schedule

    **Raises**

    **QiskitError** – If the control and target qubits cannot be identified, or the backend does not support a cx gate between the qubits, or the backend does not natively support the specified direction of the cx.
  </Function>

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### rescale\_cr\_inst

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.rescale_cr_inst" name="rescale_cr_inst" signature="static rescale_cr_inst(instruction, theta, sample_mult=16)">
    **Parameters**

    *   **instruction** (`Play`) – The instruction from which to create a new shortened or lengthened pulse.
    *   **theta** (`float`) – desired angle, pi/2 is assumed to be the angle that the pulse in the given play instruction implements.
    *   **sample\_mult** (`int`) – All pulses must be a multiple of sample\_mult.

    **Returns**

    **The play instruction with the stretched compressed**

    GaussianSquare pulse.

    **Return type**

    [qiskit.pulse.Play](qiskit.pulse.Play "qiskit.pulse.Play")

    **Raises**

    **QiskitError** – if the pulses are not GaussianSquare.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.run" name="run" signature="run(dag)">
    Run the calibration adder pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to schedule.

    **Returns**

    A DAG with calibrations added to it.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ### supported

  <Function id="qiskit.transpiler.passes.RZXCalibrationBuilderNoEcho.supported" name="supported" signature="supported(node_op)">
    **Parameters**

    **node\_op** (`DAGNode`) – The node from the dag dep.

    **Returns**

    True if the node is a RZXGate.

    **Return type**

    match
  </Function>
</Class>

